2004-10-06  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/s390/jmpbuf-unwind.h: Include bits/wordsize.h.
	(JMPBUF_CFA_UNWINDS_ADJ): Subtract 96 resp. 160 bytes from
	CFA.

2004-10-06  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel4.c (tf_msgrcv): Check for failure in msgget.  If the
	test fails, remove message queue.
	(tf_msgsnd): Likewise.

2004-10-05  Jakub Jelinek  <jakub@redhat.com>

	* tst-clock1.c: Change #ifdef to #if defined.
	* tst-clock2.c: Likewise.
	* tst-cond11.c: Likewise.

2004-10-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/timer_create.c (timer_create): Use
	defined _POSIX_CPUTIME && _POSIX_CPUTIME >= 0 instead of
	defined CLOCK_PROCESS_CPUTIME_ID #ifs and similarly for
	THREAD_CPUTIME.

2004-10-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h (_POSIX_CPUTIME,
	_POSIX_THREAD_CPUTIME): Define to 0.

2004-10-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Define _POSIX_CPUTIME
	and _POSIX_THREAD_CPUTIME to zero.
	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h: Likewise.
	* tst-barrier2.c: Fix testing for POSIX feature.
	* tst-clock1.c: Likewise.
	* tst-clock2.c: Likewise.
	* tst-cond11.c: Likewise.
	* tst-cond4.c: Likewise.
	* tst-cond6.c: Likewise.
	* tst-flock2.c: Likewise.
	* tst-mutex4.c: Likewise.
	* tst-mutex9.c: Likewise.
	* tst-rwlock12.c: Likewise.
	* tst-rwlock4.c: Likewise.
	* tst-signal1.c: Likewise.
	* tst-spin2.c: Likewise.
	* sysdeps/pthread/posix-timer.h: Likewise.
	* sysdeps/pthread/timer_create.c: Likewise.
	* sysdeps/pthread/timer_routines.c: Likewise.

2004-10-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
	(__lll_mutex_timedlock_wait): Address futex correctly.

	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
	(__lll_mutex_timedlock_wait): If woken but cannot get the lock,
	make sure 2 is stored in the futex and we looked at the old value.